* What will be new in gsl-1.10:

** gsl_ran_dirichlet now handles smaller values of alpha[] without
   underflow, avoiding a NaN in the returned value.

** The SVD routines now avoid underflow in the Schur decomposition for
matrices with extremely small values <O(1e-150).

** gsl_complex_pow now returns 0^0=1 (instead of zero) to match the usual
pow function, and handles z^(1,0) and z^(-1,0) as special cases.

** Fixed a bug in the set function for multifit lmder solver so that
previous values are cleared correctly.

** Improved the function gsl_log1p to prevent possible loss of
accuracy caused by optimisations.

** License updated to GNU GPL version 3.

** Added functions gsl_matrix_subrow and gsl_matrix_subcolumn

** Extended Cholesky routines to complex matrices

** Improved the convergence test in the Lambert functions to take
account of finite precision and avoid possible failure to converge.

** The configure script no longer redefines finite() to isfinite() as
a workaround for missing finite(), as this caused problems on Solaris.
If finite() is not present gsl_finite() will be used instead.

** Added support in gsl_ieee_set_mode for controlling SSE exceptions
and rounding through the MXCSR control word on x86 processors.

** Improved the accuracy of the generalised laguerre polynomials for
large n when alpha=0.

** The functions gsl_{isnan,isinf,finite} will now always use the
system versions of isnan, isinf and finite if they are available.
Previously the portable GSL implementations were used whenever the
platform supported IEEE comparisons.  The portable gsl_isinf function
now returns -1 instead of +1 for -Inf, in line with recent versions of
the GNU C Library.

** Added function gsl_stats_correlation to compute Pearson correlation
of two datasets

** Added support for generalized eigensystems

* What is new in gsl-1.9:

** Fixed the elliptic integrals F,E,P,D so that they have the correct
behavior for phi > pi/2 and phi < 0.  The angular argument is now