@@ -239,6 +239,7 @@ void gsl_matrix_char_minmax_index (const gsl_matrix_char * m, size_t * imin, siz
 int gsl_matrix_char_isnull (const gsl_matrix_char * m);
 int gsl_matrix_char_ispos (const gsl_matrix_char * m);
 int gsl_matrix_char_isneg (const gsl_matrix_char * m);
+int gsl_matrix_char_isnonneg (const gsl_matrix_char * m);
 
 int gsl_matrix_char_add (gsl_matrix_char * a, const gsl_matrix_char * b);
 int gsl_matrix_char_sub (gsl_matrix_char * a, const gsl_matrix_char * b);
