@@ -239,6 +239,7 @@ void gsl_matrix_minmax_index (const gsl_matrix * m, size_t * imin, size_t * jmin
 int gsl_matrix_isnull (const gsl_matrix * m);
 int gsl_matrix_ispos (const gsl_matrix * m);
 int gsl_matrix_isneg (const gsl_matrix * m);
+int gsl_matrix_isnonneg (const gsl_matrix * m);
 
 int gsl_matrix_add (gsl_matrix * a, const gsl_matrix * b);
 int gsl_matrix_sub (gsl_matrix * a, const gsl_matrix * b);
