@@ -239,6 +239,7 @@ void gsl_matrix_int_minmax_index (const gsl_matrix_int * m, size_t * imin, size_
 int gsl_matrix_int_isnull (const gsl_matrix_int * m);
 int gsl_matrix_int_ispos (const gsl_matrix_int * m);
 int gsl_matrix_int_isneg (const gsl_matrix_int * m);
+int gsl_matrix_int_isnonneg (const gsl_matrix_int * m);
 
 int gsl_matrix_int_add (gsl_matrix_int * a, const gsl_matrix_int * b);
 int gsl_matrix_int_sub (gsl_matrix_int * a, const gsl_matrix_int * b);
