@@ -239,6 +239,7 @@ void gsl_matrix_long_minmax_index (const gsl_matrix_long * m, size_t * imin, siz
 int gsl_matrix_long_isnull (const gsl_matrix_long * m);
 int gsl_matrix_long_ispos (const gsl_matrix_long * m);
 int gsl_matrix_long_isneg (const gsl_matrix_long * m);
+int gsl_matrix_long_isnonneg (const gsl_matrix_long * m);
 
 int gsl_matrix_long_add (gsl_matrix_long * a, const gsl_matrix_long * b);
 int gsl_matrix_long_sub (gsl_matrix_long * a, const gsl_matrix_long * b);
