@@ -239,6 +239,7 @@ void gsl_matrix_long_double_minmax_index (const gsl_matrix_long_double * m, size
 int gsl_matrix_long_double_isnull (const gsl_matrix_long_double * m);
 int gsl_matrix_long_double_ispos (const gsl_matrix_long_double * m);
 int gsl_matrix_long_double_isneg (const gsl_matrix_long_double * m);
+int gsl_matrix_long_double_isnonneg (const gsl_matrix_long_double * m);
 
 int gsl_matrix_long_double_add (gsl_matrix_long_double * a, const gsl_matrix_long_double * b);
 int gsl_matrix_long_double_sub (gsl_matrix_long_double * a, const gsl_matrix_long_double * b);
