@@ -239,6 +239,7 @@ void gsl_matrix_uchar_minmax_index (const gsl_matrix_uchar * m, size_t * imin, s
 int gsl_matrix_uchar_isnull (const gsl_matrix_uchar * m);
 int gsl_matrix_uchar_ispos (const gsl_matrix_uchar * m);
 int gsl_matrix_uchar_isneg (const gsl_matrix_uchar * m);
+int gsl_matrix_uchar_isnonneg (const gsl_matrix_uchar * m);
 
 int gsl_matrix_uchar_add (gsl_matrix_uchar * a, const gsl_matrix_uchar * b);
 int gsl_matrix_uchar_sub (gsl_matrix_uchar * a, const gsl_matrix_uchar * b);
