@@ -239,6 +239,7 @@ void gsl_matrix_ushort_minmax_index (const gsl_matrix_ushort * m, size_t * imin,
 int gsl_matrix_ushort_isnull (const gsl_matrix_ushort * m);
 int gsl_matrix_ushort_ispos (const gsl_matrix_ushort * m);
 int gsl_matrix_ushort_isneg (const gsl_matrix_ushort * m);
+int gsl_matrix_ushort_isnonneg (const gsl_matrix_ushort * m);
 
 int gsl_matrix_ushort_add (gsl_matrix_ushort * a, const gsl_matrix_ushort * b);
 int gsl_matrix_ushort_sub (gsl_matrix_ushort * a, const gsl_matrix_ushort * b);
