@@ -163,6 +163,7 @@ int gsl_vector_char_add_constant (gsl_vector_char * a, const double x);
 int gsl_vector_char_isnull (const gsl_vector_char * v);
 int gsl_vector_char_ispos (const gsl_vector_char * v);
 int gsl_vector_char_isneg (const gsl_vector_char * v);
+int gsl_vector_char_isnonneg (const gsl_vector_char * v);
 
 #ifdef HAVE_INLINE
 
