@@ -163,6 +163,7 @@ int gsl_vector_ulong_add_constant (gsl_vector_ulong * a, const double x);
 int gsl_vector_ulong_isnull (const gsl_vector_ulong * v);
 int gsl_vector_ulong_ispos (const gsl_vector_ulong * v);
 int gsl_vector_ulong_isneg (const gsl_vector_ulong * v);
+int gsl_vector_ulong_isnonneg (const gsl_vector_ulong * v);
 
 #ifdef HAVE_INLINE
 
