@@ -163,6 +163,7 @@ int gsl_vector_ushort_add_constant (gsl_vector_ushort * a, const double x);
 int gsl_vector_ushort_isnull (const gsl_vector_ushort * v);
 int gsl_vector_ushort_ispos (const gsl_vector_ushort * v);
 int gsl_vector_ushort_isneg (const gsl_vector_ushort * v);
+int gsl_vector_ushort_isnonneg (const gsl_vector_ushort * v);
 
 #ifdef HAVE_INLINE
 
