@@ -1,3 +1,7 @@
+2007-08-21  Brian Gough  <bjg@network-theory.co.uk>
+
+	* prop_source.c (FUNCTION): added gsl_matrix_isnonneg
+
 2007-02-17  Brian Gough  <bjg@network-theory.co.uk>
 
 	* test_source.c (FUNCTION): avoid running negative value tests on
